This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
1/5/21: Fixed RunScriptInWatchedDir to work outside the current directory
(In 3.8).

12/31/20: SEM_3-8-6
12/31/20: Fixed when the Multiple Record center shot is taken (after
vs. before), broken 6/3/20 (In 3.8).

12/30/20: Fixed orientation of drawn circles for multiple Records in a hole to
match what will be taken (In 3.8).

12/14/20: Fixed problem with frames not being saved when aligning whole tilt
series in IMOD is selected and the Save checkbox is not checked (In 3.8).

12/13/20: Made tilt series controller stop properly if absolute image shift
limit is reached when autoaligning (In 3.8).

12/2/20: Fixed behavior when LimitNextAutoAlign is used and there are no peaks
within the limit (In 3.8).

11/29/20: Fixed which Run button has focus in one-line script window so Enter
will run the script just edited; made Ctrl-A and Ctrl-Z work there (In 3.8).

11/26/20: SEM_3-8-5
11/26/20: Fixed initial exposure time being used at highest tilt angle instead
of zero tilt with cosine intensity changes, broken 8/4/20 (In 3.8).

11/26/20: Fixed taking current parameters for number of montage frames instead
of ones the montage was taken with when making a map (In 3.8).

11/25/20: Fixed problem with using the current probe mode or alpha for
assessing whether focus calibration exists in Low Dose; used Focus area values
instead (In 3.8).

11/24/20: Fixed reordering of montage Z coordinates for dose-symmetric series,
in case that should ever happen (In 3.8).

11/23/20: Added property NoScopeControlOnStartup to work around a problem in
JEOL software when program starts with beam ramping up (In 3.8).

11/23/20: Stopped turning off beam when program crashes (In 3.8).
