@@ -2570,8 +2570,8 @@
         </TR>
         <TR VALIGN="top">
           <TD>UseTrialSizeForShiftCal</TD>
-          <TD>Set to 1 to use the image size in the Trial control set for image and stage 
-            shift calibrations.</TD>
+          <TD>Set to 1 to use the image size, and subarea offset if any, in the Trial
+            control set for image and stage shift calibrations.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>UseTrialBinningForShiftCal</TD>
