@@ -514,7 +514,10 @@
       'UseTrialSizeForShiftCal' and is not saved in user settings between sessions.&nbsp; 
       Although the calibrations generally have no trouble with non-square cameras, 
       this setting might be needed for side-mount cameras where there is too much 
-      distortion outside of a square region.</P>
+      distortion outside of a square region, or for a camera with a bad area on one 
+      side.&nbsp; To accommodate the latter situation, subareas will also have the same
+       offset from center, if any, as the Trial parameters.
+    </P>
       <P><A name="hid_calibration_listisvectors"></A><B>List IS Vectors command 
         (Calibration - Image &amp; Stage Shift sub-menu)</B></P>
       <P>Use this command to get a listing of the length and angles of the image shift 
